--- a/frontend/src/styles/message.css
+++ b/frontend/src/styles/message.css
@@ -55,7 +55,7 @@
     text-align: center;
     font-weight: bold;
     font-size: calc(1.2em + 1.2vw);
-    color:#DFDDE2;
+    color:whitesmoke;
   }
   
   .container-fluid.center{
