--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -44,3 +44,7 @@ body{
     box-shadow: 0 1px 0 0 #000;
   }
 
+  .card-title{
+    font-weight: bold!important;
+    color: whitesmoke!important;
+  }
