--- a/frontend/src/styles/slider.css
+++ b/frontend/src/styles/slider.css
@@ -1,12 +1,11 @@
 
 .text-message-two{
     text-align: center;
-    color:#000000;
+    color:#EAB14D;
     font-size: 2.5em;
     font-weight: bolder;
-    background-color: #EAB14D;
+    background-color: whitesmoke;
     padding:0.3em;
-    border: 5px solid #EAB14D;
     margin: 0px;
   }
   
