--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -64,3 +64,8 @@ body{
     color:rgb(124, 123, 79)!important;
     font-size: calc(0.6em + 0.6vw)!important;
    }
+
+
+   .material-icons{
+     color:#EAB14D;
+   }
