--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,5 +1,14 @@
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html{
   background-color: whitesmoke;
+
 }
 body{
     font-family: 'Open Sans', sans-serif;
