--- a/frontend/src/styles/card.css
+++ b/frontend/src/styles/card.css
@@ -4,13 +4,15 @@ html{
     font-size:10px;
 }
 
+
+
 .img__card{
     width: 100%;
 }
 
 .card__travellers{
     width: 100%;
-    height: 50vh;
+    height: 55vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -93,7 +95,7 @@ html{
 
 
     .itinerary__post{
-        max-width: 80rem;
+        max-width: 100rem;
     }
 
     .itinerary__post__img{
@@ -135,7 +137,7 @@ html{
 
     .card__travellers{
         width: 100%;
-        height: 85vh;
+        height: 83vh;
     }
 
 }
@@ -156,11 +158,14 @@ html{
   }
 
   .money__img{
-    width: 3em;
-    margin-right: 1em;
+    width: 1.8em;
+    padding: 0.2em;
   }
 
   .center.container__viewmore{
       margin-top: -50px;
   }
  
+  .price__text{
+    padding: .5em;
+  }
