--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -1,13 +1,25 @@
+.background___home{
+    background-image: url('../images/Hero.jpg');
+    background-position: center;
+    background-repeat: no-repeat;;
+    width: 100%;
+    height: 90vh;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+}
+
+
 #arrowAnim {
-    padding: 0px;
+    padding: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .arrow {
-    width: 0.3vw;
-    height: 0.3vw;
+    width: 30px;
+    height: 30px;
     border: 0.5vw solid;
     border-color: #EAB14D transparent transparent #EAB14D;
     transform: rotate(135deg);
@@ -46,16 +58,17 @@
   }
   
   .arrow-animated{
+    margin-top:50em;
     text-align: center;
     padding: 2em;
   }
   
   .text-message{
-    margin-top:12em;
+    margin-top:0.5em;
     text-align: center;
     font-weight: bold;
     font-size: calc(1.2em + 1.2vw);
-    color:whitesmoke;
+    color:#EAB14D;
   }
   
   .container-fluid.center{
@@ -81,3 +94,12 @@
   .message-btn{
     font-weight: bold;
   }
+
+  @media screen and (max-width: 768px){
+    
+    .arrow-animated{
+        margin-top:40em;
+        padding: 5em;
+      }
+      
+}
