--- a/frontend/src/styles/signIn.css
+++ b/frontend/src/styles/signIn.css
@@ -1,25 +1,44 @@
-.container img{
-    text-align: center;
-    width: 10em;
-
+.container__super__SignIn{
+    display: flex;
+    justify-content: space-around;
+    background-color: #FDB94C;
+    margin: 2em 10em 2em 10em;
+    border-radius: 20px;
 }
 
 .container__signIn{
-    margin: 2vh 35vw 2vh 35vw;
-    border: 2px #000000 solid;
-    padding: 2rem;
+    width: 30%;
+    padding: 3em;
+    width: 30%;
+    border: 5px solid whitesmoke;
+    border-radius: 10px;
+    margin:10em;
+    height: 50vh;
+}  
+
+.img__backgroud__signIn{
+    background-image: url('../images/background__signIn.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 70vh;
+    height: 70vh;
+    width: 60%;
+}
+
+.container__super__SignIn p{
     text-align: center;
+    color: #334780;
+    font-size: 3em;
+    font-weight: bolder;
+    padding-bottom: 1em;
 }
 
 .container__signIn label{
-    font-size: 2em; 
-    padding: 1vh;
-    font-weight: bold;  
-    color: #2F8F58;
-}
-
-.container__signIn a{
-    color: #EAB14D ;
+    font-size: 1.7em;
+    padding: 0px;
+    font-weight: bolder;
+    color: #334780;
+   
 }
 
 .button__signIn{
@@ -28,27 +47,59 @@
     text-transform: uppercase;
     font-size: 1.2rem;
     color: #EAB14D;
-    background-image: linear-gradient(to right, #070707 0%, #050505 100%) ;
+    background-image: linear-gradient(to right, #334780 0%, #334780 100%) ;
     text-decoration: none;
     border-radius: .8rem;
     text-decoration: none;
 }
 
-.container__signIn span{
+.container__signIn__more{
+    margin-top: 0.5em;
     font-size: 1.3em;
+    text-align: center;
+}
+
+.container__signIn__more a{
+    color: #334780;
 }
 
 
 @media screen and (max-width: 768px){
 
-    .container__signIn__more{
-        margin: 2vh 10vw 2vh 10vw; 
+    .img__backgroud__signIn{
+       display: none;
+    }
+
+    .container__super__SignIn{
+        margin: 3em 1.5em 3em 1.5em;
     }
 
     .container__signIn{
-        margin: 2vh 10vw 2vh 10vw;
-        border: 2px #000000 solid;
-        padding: 2rem;
+        padding: 3em;
+        width: 90%;
+        border: 5px solid #FDB94C;
+        border-radius: 10px;
+        margin:1em;
+        height: 60vh;
+    }  
     
-    }
+    
 }
+
+@media screen and (max-width: 1068px){
+
+    .img__backgroud__signIn{
+        display: none;
+     }
+ 
+    .container__signIn{
+        padding: 3em;
+        width: 90%;
+        border: 5px solid #FDB94C;
+        border-radius: 10px;
+        margin:1em;
+        height: 60vh;
+    }  
+
+}
+
