--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -36,9 +36,22 @@ nav{
 }
 
 
+.select-dropdown li.disabled, .select-dropdown li.disabled > span, .select-dropdown li.optgroup {
+    color: rgba(0, 0, 0, 0.3);
+    background-color: transparent;
+}
+
 @media screen and (max-width: 768px){
-.img__profile{
-    width: 6em;
+    .img__profile{
+    width: 8em;
     margin-right: 5.5em;
+    }
+
+    .brand-logo img{
+    width: 6.5em!important;
+    padding: 0.5em;
+    }
+
 }
-}
+
+
