--- a/frontend/src/styles/slider.css
+++ b/frontend/src/styles/slider.css
@@ -1,12 +1,12 @@
 
 .text-message-two{
     text-align: center;
-    color:#EAB14D;
+    color: #334780;
     font-size: 2.5em;
     font-weight: bolder;
     background-color: whitesmoke;
     padding:0.3em;
-    margin: 0px;
+    margin: 5px;
   }
   
   
