--- a/frontend/src/styles/card.css
+++ b/frontend/src/styles/card.css
@@ -12,18 +12,18 @@ html{
 
 .card__travellers{
     width: 100%;
-    height: 55vh;
+    height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #eee;
+    background-color: #FAFAF8;
 }
 
 .itinerary__post{
     width: 100%;
     max-width: 98rem;
     padding: 5rem;
-    background-color: #fff;
+    background-color: #FAFAF8;
     box-shadow: 0 1.4rem 8rem rgba(0,0,0,.2);
     display: flex;
     align-items: center;
@@ -31,9 +31,9 @@ html{
 }
 
 .itinerary__post__img{
-    min-width: 35rem;
-    max-width: 35rem;
-    height: 30rem;
+    min-width: 25rem;
+    max-width: 25rem;
+    height: 20rem;
     transform: translateX(-8rem);
     position: relative;
 }
@@ -84,11 +84,16 @@ html{
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: 1.2rem;
-    color: #fff;
+    color: #FAFAF8;
     background-image: linear-gradient(to right, #EAB14D 0%, #EAB14D 100%) ;
     text-decoration: none;
     border-radius: .8rem;
     text-decoration: none;
+}
+
+.center.container__viewmore{
+    padding: 0em;
+    margin-top: -11em!important;
 }
 
 @media screen and (max-width: 1068px){
@@ -106,6 +111,11 @@ html{
     .card__travellers{
         width: 100%;
         height: 100vh;
+    }
+
+    .center.container__viewmore{
+        padding: 0em;
+        margin-top: -25em!important;
     }
 }
 
@@ -139,6 +149,11 @@ html{
         width: 100%;
         height: 83vh;
     }
+
+    .center.container__viewmore{
+    padding: 0em;
+    margin-top: -11em!important;
+}
 
 }
 
