--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -42,12 +42,13 @@ nav{
 }
 
 .img__profile__userLogin{
-    width: 11em;
-    height: 11vh;
+    width: 12em;
+    height: 12vh;
     padding: 0px;
-    margin: .5em 7em .5em 1em;
-    border: 2px  solid #EAB14D;
-    border-radius:50px;
+    margin: 1em 15em .5em 1em;
+    border: 4px  solid #EAB14D;
+    border-radius:50%;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 768px){
