--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -13,7 +13,7 @@
 
 .footer__app a{
     color:#334780;
-    padding: 0em;
+    margin: 2em;
     font-size: 1.6em;
     font-weight: bold;
 }
@@ -28,26 +28,38 @@
     width: 1.3em;
 }
 
-.link__footer{
-    display: flex;
-    flex-direction: column;
-    margin-right: 10em;
-}
+
 
 @media screen and (max-width: 768px){
 
-    .logo__footer{
-        width: 9em;
-        margin-left: 15rem;
-    }
 
+    .logo__footer{
+        width: 8em;
+        margin-left: -2rem;
+    }
+    
     .footer__app{
         display: flex;
-        flex-direction: column;
-        margin-top: 0em;
-        padding: 1em;
+        justify-content: space-between;
+        margin-top: 10em;
+        padding: 5em;
         background-color: #EAB14D;
     }
+
+    .footer__app a{
+        color:#334780;
+        margin: 0.5em;
+        font-size: 1.6em;
+        font-weight: bold;
+    }
     
+    .icons__footer a img{
+        width: 1.5em;
+        margin-right: 0em;
+    }
     
+
+#icon__facebook{
+    width: 1em;
+}
 }
