--- a/frontend/src/styles/activities.css
+++ b/frontend/src/styles/activities.css
@@ -45,56 +45,6 @@
     font-size: 5em;
 }
 
-.comment__activity{
-    
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    background-color: #FAFAF8;
-   
-  
-    padding: 4em;
-    border-radius: 10px;
-    border: 2px solid #334780;
-}
-
-.comment__activity label{
-    color: #334780;
-    font-size: 1.3em;
-    font-weight: bolder;
-}
-
-.comment__notRegistered{
-    background-color: #FAFAF8;
-    margin: 1em 55em 4em;
-    padding: 4em;
-    border-radius: 10px;
-    border: 2px solid #334780;
-}
-.comment__notRegistered p{
-    font-size: 2em;
-    color: #334780;
-}
-
-.boton__send__comment{
-    background-color: #334780;
-    color: #EAB14D;
-}
-
-.boton__send__comment:hover{
-    background-color: #EAB14D;
-    color: #334780;
-}
-
-.img__profile__comment{
-    width: 5em;
-    height: 5vh;
-    padding: 0px;
-    margin: 1em 15em .5em 1em;
-    border: 2px  solid #334780;
-    border-radius:50%;
-    object-fit: cover;
-}
 
 @media screen and (max-width: 768px){
 
@@ -113,4 +63,25 @@
     font-weight: bolder;
 }
 
+.img__activiy{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 40vh;
+    width: 100%;
+    height: 45vh;
+    text-align: center;
+    border-radius: 10px;
+    padding: 0px;
+    margin: 0em 1em;
+
+}
+
+
+.container__activity{
+    margin-top: 0em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #FAFAF8;
+}
 }
